# Winform-Finalproject

./: .gitignore  Readme.md  finalproject.sln  test.html
backend/: Cargo.toml
backend/src/: main.rs
backend/src/controller/: controller.rs
backend/src/events/: event.rs
finalproject/: Form1.Designer.cs  Form1.cs  Form2.Designer.cs  Form2.cs  Form3.Designer.cs  Form3.cs  Program.cs  finalproject.csproj  findvideo.Designer.cs  findvideo.cs  friendlist.Designer.cs  friendlist.cs  joinroom.Designer.cs  joinroom.cs  packages.config  test.html
finalproject/Properties/: AssemblyInfo.cs
finalproject/webPage/: friendList.css  friendList.html  friendList.js  index.css  index.html  memberList.css  memberList.html  memberList.js  memberPage.css  memberPage.html  memberPage.js  myWS.js  room.css  room.html  search.css  search.html  search.js  test.js  userInfo.json  video.css  video.html  video.js  videoPage.css  videoPage.html  videoQueue.css  videoQueue.html  videoQueue.js
