[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
bb8 = "0.9.1"
bb8-postgres = "0.9.0"
chrono = { version = "0.4.42", features = ["serde", "clock"] }
dashmap = "6.1.0"
futures-util = "0.3.31"
once_cell = "1.21.3"
postgres = "0.19.12"
postgres-types = { version = "0.2.11", features = ["derive"] }
rustdb = "5.2.114"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.104"
tokio = {version = "1.48", features = ["full"]}
tokio-postgres = { version = "0.7.15", features = ["with-uuid-1", "with-chrono-0_4"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
